--- a/adventurenotes/pom.xml
+++ b/adventurenotes/pom.xml
@@ -47,6 +47,16 @@
       <version>2.10.1</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.15.0-rc1</version>
+  </dependency>
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.12.1</version>
+  </dependency>
   </dependencies>
 
   <build>
